<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/top_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp" >

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_margin="5dp"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:id="@+id/product_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/product_image"
                android:orientation="vertical" >

                <com.sri.adobe.productapp.views.TextAwesome
                    android:id="@+id/product_details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/inapp_text"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <com.sri.adobe.productapp.views.ColoredRatingBar
                        android:id="@+id/product_details_rating"
                        style="@style/coloredRatingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        rb:indicator="true"
                        rb:rating="4.2" />

                    <com.sri.adobe.productapp.views.TextAwesome
                        android:id="@+id/product_details_rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/inapp_text"
                        android:textSize="18sp" />
                </LinearLayout>

                <com.sri.adobe.productapp.views.TextAwesome
                    android:id="@+id/product_details_inapp"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:text="@string/product_inapp_text"
                    android:textSize="16sp"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_layout"
            android:layout_margin="10dp"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="10dp" >

            <com.sri.adobe.productapp.views.TextAwesome
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="@string/product_inapp_text"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <com.sri.adobe.productapp.views.TextAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="App Type"
                        android:textSize="14sp" />

                    <com.sri.adobe.productapp.views.TextAwesome
                        android:id="@+id/product_details_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/product_inapp_text"
                        android:textColor="#888888"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <com.sri.adobe.productapp.views.TextAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Last Updated"
                        android:textSize="14sp" />

                    <com.sri.adobe.productapp.views.TextAwesome
                        android:id="@+id/product_details_lastupdated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/product_inapp_text"
                        android:textColor="#888888"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <com.sri.adobe.productapp.views.ButtonAwesome
                android:id="@+id/product_storeurl"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/abs__btn_cab_done_holo_dark"
                android:gravity="center_vertical"
                android:onClick="playStoreClicked"
                android:padding="5dp"
                android:text="@string/product_storeurl"
                android:textSize="18sp" />

            <com.sri.adobe.productapp.views.ButtonAwesome
                android:id="@+id/product_share_app"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/abs__btn_cab_done_holo_dark"
                android:gravity="center_vertical"
                android:onClick="shareAppClicked"
                android:padding="5dp"
                android:text="@string/product_share_app"
                android:textSize="18sp" />

            <com.sri.adobe.productapp.views.ButtonAwesome
                android:id="@+id/product_share_sms"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/abs__btn_cab_done_holo_dark"
                android:gravity="center_vertical"
                android:onClick="shareSmsClicked"
                android:padding="5dp"
                android:text="@string/product_share_sms"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>